# home-mlops

./: .gitignore  README.md  requirements.txt
bento-ml/: bentofile.yaml  main.py
common/: pyproject.toml
common/home/: utils.py
fastapi/app/: Dockerfile  inference.py  main.py
jenkins/: Jenkinsfile  Jenkinsfile-bento-ml  Jenkinsfile-fast-api
mlflow-ui/: Dockerfile  deploy.sh
mysql/: deploy.sh
serving/: bento.sh  bentofile.yaml  deploy.sh  fastapi.sh
serving/bento-ml/tabular-iris-multi-classifier/: bentofile.yaml
serving/fast-api/tabular-iris-multi-classifier/: docker-compose.yaml
serving/tabular-diabetes-regressor/: docker-compose.yaml
serving/tabular-diabetes-regressor/bento-ml/: bentofile.yaml  import.py  service.py
serving/tabular-diabetes-regressor/fast-api/: Dockerfile  build.sh
serving/tabular-iris-lightgbm/bento-ml/: bentofile.yaml  service.py
serving/tabular-iris-multi-classifier/: docker-compose.yaml
serving/tabular-iris-multi-classifier/bento-ml/: bentofile.yaml  deploy.sh  service.py
serving/tabular-iris-multi-classifier/fast-api/: Dockerfile  deploy.sh
serving/tabular-iris-pytorch/bento-ml/: bentofile.yaml
serving/tabular-iris-xgboost/bento-ml/: bentofile.yaml  build.sh
tests/: test_bentoml.py  test_mlflow.py  test_mysql.py
train/: deploy.sh  train_iris.py
training/: deploy.sh  mlflow-ui.sh
training/tabular-diabetes-regressor/: train.py
training/tabular-iris-lightgbm/: train.py
training/tabular-iris-multi-classifier/: train.py
training/tabular-iris-pytorch/: train.py
training/tabular-iris-xgboost/: train.py
(+15 files in other folders)
